# Path-Tracing-Project

./: CMakeLists.txt  README.md
doc/: drivelink.txt
gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gui_test  gui_test.sln  gui_test.vcxproj  gui_test.vcxproj.filters  main.cpp
gui/Release/: imgui.ini
gui/gui_test.dir/Release/: gui_test.exe.recipe
gui/gui_test.dir/Release/gui_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  gui_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gui/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
gui/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
gui_pure/: CMakeLists.txt  README.md
gui_ubuntu/: CMakeLists.txt  main.cpp
libs/: readme.md
libs/bitMapPlusPlus/include/: BitmapPlusPlus.hpp
libs/glad/include/glad/: glad.h
libs/imgui/: imgui_demo.cpp
libs/lib/: README.txt
meetingnotes/: meet-01-12.md  meet-03-11.md  meet-15-11.md  meet-24-10.md  meet-24-11.md  meet-29-11.md
scenes/: input_scene.txt  input_scene_stars.txt
src/: camera.cpp  camera.hpp  input_scene.txt  material.cpp  material.hpp  object.hpp  path_tracing_utils.h  path_tracing_vars.h  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  utils.h  vectors.cpp  vectors.hpp
src/raw_full_imgui_base_windows_msys64_gpp/imgui-test-2/include/imgui/: imgui_impl_glfw.cpp
src/raw_full_imgui_base_windows_msys64_gpp/imgui-test-2/include/windows/glad/src/: glad.c
src/raw_full_imgui_base_windows_msys64_gpp/imgui-test-2/include/windows/lib/: README.txt
src/raw_full_imgui_base_windows_msys64_gpp/imgui-test-2/src/: imgui.ini  main.cpp
tests/unit_test1/: CMakeLists.txt  input_scene.txt  main.cpp
tests/unit_test2/: CMakeLists.txt  main.cpp
tests/unit_test3/: main.cpp
tests/unit_test4/: CMakeLists.txt
tests/unit_test5/: input_scene.txt  main.cpp
tests/unit_test6/: CMakeCache.txt  Makefile  cmake_install.cmake  input_scene_stars.txt  main.cpp  test
